<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textColor="#888"
        android:text="@string/txtTitulo"
        android:textSize="18dp"/>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">


        <EditText
            android:id="@+id/activity_main_edit_estatura"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/editEstatura"
            android:inputType="numberDecimal"
            android:paddingBottom="20dp"
            android:textAlignment="center"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/activity_main_edit_peso"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/editPeso"
            android:inputType="numberDecimal"
            android:textSize="14dp" />

        <Button
            android:id="@+id/activity_main_calcularIMC"
            android:layout_width="130dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button"
            android:onClick="calcularIMC"
            android:text="@string/btnCalcular"
            android:textColor="#FFF"
            android:textSize="11dp"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/activity_main_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/editResultado"
            android:inputType="numberDecimal"
            android:textSize="12dp"
            android:textAlignment="center"/>

    </LinearLayout>

</LinearLayout>